# ocaml-sandbox

./: README.md  binary_search_tree.opam  dune-project  hello.opam  higher_order_function.opam  poly_bst.opam  practice1.opam  practice2.opam  practice3.opam  sandbox.opam  tail_recursive_function.opam
binary_search_tree/src/: bst.ml  mutable_bst.ml  poly_bst.ml
hello/src/: dune  say.ml
higher_order_function/src/: dune  func.ml  func.mli
higher_order_function/test/: dune
poly_bst/src/: dune  tree.ml
poly_bst/test/: dune
practice1/src/: dune  number.ml
practice1/test/: dune
practice2/src/: circle.ml  dune  menu.ml  rational.ml
practice2/test/: dune
practice3/src/: data.ml  dune
practice3/test/: dune
tail_recursive_function/src/: dune  rec.ml
tail_recursive_function/test/: dune
